# ChangeLog for sys-apps/tuxonice-userui
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/tuxonice-userui/ChangeLog,v 1.5 2007/12/28 12:29:06 maekke Exp $

  28 Dec 2007; Markus Meier <maekke@gentoo.org>
  tuxonice-userui-0.7.2.ebuild:
  x86 stable, bug #202064

  23 Dec 2007; Krzysiek Pawlik <nelchael@gentoo.org> metadata.xml:
  Change maintainer.

  30 Oct 2007; Alon Bar-Lev <alonbl@gentoo.org>
  files/digest-tuxonice-userui-0.7.2, Manifest:
  Fix parallel make issue, bug#197507

*tuxonice-userui-0.7.2 (27 Oct 2007)

  27 Oct 2007; Alon Bar-Lev <alonbl@gentoo.org> +metadata.xml,
  +tuxonice-userui-0.7.2.ebuild:
  Version dump, rename to tuxonice

  12 Jun 2007; Alon Bar-Lev <alonbl@gentoo.org>
  -files/suspend2-userui-0.6.4-glibc.patch,
  -files/suspend2-userui-0.6.4-remove-debug.patch,
  -files/suspend2-userui-0.6.4-syscall.patch,
  -files/suspend2-userui-0.7.0-syscall.patch,
  -suspend2-userui-0.6.4-r1.ebuild, -suspend2-userui-0.6.4-r2.ebuild,
  -suspend2-userui-0.7.0.ebuild:
  Cleanup

  12 Jun 2007; Markus Ullmann <jokey@gentoo.org>
  suspend2-userui-0.7.1.ebuild:
  Stable on x86 wrt bug #180646

  03 Jun 2007; Alon Bar-Lev <alonbl@gentoo.org>
  suspend2-userui-0.7.1.ebuild:
  Remove x86 keyword

  02 Jun 2007; Markus Ullmann <jokey@gentoo.org>
  suspend2-userui-0.7.1.ebuild:
  Stable on x86 wrt bug #180646

*suspend2-userui-0.7.1 (18 May 2007)

  18 May 2007; Alon Bar-Lev <alonbl@gentoo.org>
  -suspend2-userui-0.7.1_pre1.ebuild, +suspend2-userui-0.7.1.ebuild:
  Version bump

*suspend2-userui-0.7.1_pre1 (17 May 2007)

  17 May 2007; Alon Bar-Lev <alonbl@gentoo.org>
  +suspend2-userui-0.7.1_pre1.ebuild:
  Version bump

  26 Apr 2007; Alon Bar-Lev <alonbl@gentoo.org>
  suspend2-userui-0.6.4-r1.ebuild, suspend2-userui-0.6.4-r2.ebuild,
  suspend2-userui-0.7.0.ebuild:
  Modified gz extension to *, bug#175955, thanks to Alexander Skwar

  01 Apr 2007; Alon Bar-Lev <alonbl@gentoo.org>