@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/tuxonice-userui/Attic/tuxonice-userui-0.7.2.ebuild,v 1.2 2007/12/28 12:29:06 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/tuxonice-userui/Attic/tuxonice-userui-0.7.2.ebuild,v 1.3 2008/03/24 11:00:01 maekke Exp $
 
 inherit toolchain-funcs eutils
 
@@ -12,7 +12,7 @@ SRC_URI="http://www.tuxonice.net/downloads/all/${MY_P}.tar.gz
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 x86"
+KEYWORDS="amd64 x86"
 
 IUSE="fbsplash"
 DEPEND="fbsplash? (	>=media-gfx/splashutils-1.5.2.1 )"
