@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/tuxonice-userui
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/tuxonice-userui/ChangeLog,v 1.5 2007/12/28 12:29:06 maekke Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/tuxonice-userui/ChangeLog,v 1.6 2008/03/24 11:00:01 maekke Exp $
+
+  24 Mar 2008; Markus Meier <maekke@gentoo.org>
+  tuxonice-userui-0.7.2.ebuild:
+  amd64 stable, bug #202064
 
   28 Dec 2007; Markus Meier <maekke@gentoo.org>
   tuxonice-userui-0.7.2.ebuild:
